Draft version of marking assignment as completed

--- a/ScheduleModule/Themes/Generic.xaml
+++ b/ScheduleModule/Themes/Generic.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary Source="../Views/RoomView.xaml" />
         <ResourceDictionary Source="../Views/TimeTickerView.xaml" />
         <ResourceDictionary Source="../Views/ScheduleAssignmentUpdateView.xaml" />
+        <ResourceDictionary Source="../Views/DateTimeSelectionDialogView.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <Style TargetType="{x:Type xctk:TimelinePanel}">
         <Setter Property="UnitSize"
