--- a/ScheduleModule/Views/DateTimeSelectionDialogView.xaml
+++ b/ScheduleModule/Views/DateTimeSelectionDialogView.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels">
+                    xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels"
+                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     <DataTemplate DataType="{x:Type viewModels:DateTimeSelectionDialogViewModel}">
         <DataTemplate.Resources>
             <ResourceDictionary>
@@ -11,7 +12,7 @@
         </DataTemplate.Resources>
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="Укажите время выполнения:" />
-            <DatePicker SelectedDate="{Binding SelectedDateTime}" />
+            <xctk:DateTimePicker Value="{Binding SelectedDateTime}" />
         </StackPanel>
     </DataTemplate>
 </ResourceDictionary>
