--- a/CommissionsModule/Views/Protocols/CommissionСonclusionView.xaml
+++ b/CommissionsModule/Views/Protocols/CommissionСonclusionView.xaml
@@ -30,38 +30,48 @@
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
 
                 <TextBlock Grid.Row="0" Grid.Column="0" Margin="2, 2, 2, 0">
-                    <Run Text="Протокол №" />
+                    <Run Text="Комиссия №" />
                     <Run Text="*"
                          FontWeight="SemiBold"
                          Foreground="Red" />
                 </TextBlock>
-                <TextBox Grid.Row="0" Grid.Column="1"  Text="{Binding ProtocolNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"/>
+                <TextBox Grid.Row="0" Grid.Column="1"  Text="{Binding CommissionNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"/>
                 <TextBlock Grid.Row="0" Grid.Column="2" Margin="2, 2, 2, 0">
                     <Run Text=" от " />
                     <Run Text="*"
                          FontWeight="SemiBold"
                          Foreground="Red" />
                 </TextBlock>
-                <DatePicker Grid.Row="0" Grid.Column="3" Margin="2, 2, 0, 0" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" SelectedDate="{Binding ProtocolDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
+                <DatePicker Grid.Row="0" Grid.Column="3" Margin="2, 2, 0, 0" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" SelectedDate="{Binding CommissionDate, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
+                
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="2, 2, 2, 0">
+                    <Run Text="Протокол №" />
+                    <Run Text="*"
+                         FontWeight="SemiBold"
+                         Foreground="Red" />
+                </TextBlock>
+                <TextBox Grid.Row="1" Grid.Column="1"  Text="{Binding ProtocolNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"/>
+               
 
-                <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding NeedWaitingFor}">Протокол в ожидании</CheckBox>
-                <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" IsEnabled="{Binding NeedWaitingFor}" Text="{Binding WaitingFor, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+                <CheckBox Grid.Row="2" Grid.Column="0" IsChecked="{Binding NeedWaitingFor}">Протокол в ожидании</CheckBox>
+                <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" IsEnabled="{Binding NeedWaitingFor}" Text="{Binding WaitingFor, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
                          Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}"/>
 
-                <TextBlock Grid.Row="2" Grid.Column="0">Диагноз</TextBlock>
-                <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Diagnosis, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Grid.Row="3" Grid.Column="0">Диагноз</TextBlock>
+                <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Diagnosis, UpdateSourceTrigger=PropertyChanged}"/>
 
-                <TextBlock Grid.Row="3" Grid.Column="0">
+                <TextBlock Grid.Row="4" Grid.Column="0">
                     <Run Text="Решение" />
                     <Run Text="*"
                          FontWeight="SemiBold"
                          Foreground="Red" />
                 </TextBlock>
-                <controls:TreeViewComboBox Grid.Row="3"
+                <controls:TreeViewComboBox Grid.Row="4"
                                        Grid.Column="1"
                                        Grid.ColumnSpan="3"
                                        Margin="0,0,20,0"
@@ -72,11 +82,11 @@
                                        ItemTemplate="{StaticResource DecisionsTree}"
                                        FilterPredicate="{x:Static data:Decision.DecisionFilterPredicate}"/>
 
-                <TextBlock Grid.Row="4" Grid.Column="0">Рекомендации</TextBlock>
-                <TextBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Comment}"/>
+                <TextBlock Grid.Row="5" Grid.Column="0">Рекомендации</TextBlock>
+                <TextBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="3" Text="{Binding Comment}"/>
 
-                <CheckBox Grid.Row="5" Grid.Column="0" IsChecked="{Binding NeedToDoDateTime}">Дата выполнения решения</CheckBox>
-                <DatePicker Grid.Row="5" Grid.Column="1" Margin="2, 2, 0, 0" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" IsEnabled="{Binding NeedToDoDateTime}" 
+                <CheckBox Grid.Row="6" Grid.Column="0" IsChecked="{Binding NeedToDoDateTime}">Дата выполнения решения</CheckBox>
+                <DatePicker Grid.Row="6" Grid.Column="1" Margin="2, 2, 0, 0" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" IsEnabled="{Binding NeedToDoDateTime}" 
                             SelectedDate="{Binding ToDoDateTime, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
 
             </Grid>
